references and buttons

--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <mata charset = "UTF-8">
-    <meta name ="viewport" content ="width=device-width, 
-    initial-scaled= 1.0">
-    <meta http-equiv ="X-UA-Compatibale" content = "ie=edge">
+    <meta charset = "UTF-8">
+    <meta name = "viewport" content = "width=device-width, 
+    initial-scale =1.0">
+    <mata http-equiv="X-UA-Compatible" content ="ie=edge">
     <title>Calculator</title>
+    <link href="style.css" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class = "calculator-grid">
+        <div class = "output">
+            <div class = "previous-operand"></div>
+            <div class = current-operand></div>
+        </div>
+    </div>
+    <button>AC</button>
+    <button>DEL</button>
+    <button>÷</button>
+    <button>7</button>
+    <button>8</button>
+    <button>9</button>
+    <button>+</button>
+    <button>4</button>
+    <button>5</button>
+    <button>6</button>
+    <button>-</button>
+    <button>1</button>
+    <button>2</button>
+    <button>3</button>
+    <button>*</button>
+    <button>%</button>
+    <button>0</button>
+    <button>.</button>
+    <button>=</button>
 </body>
 </html>
