--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class = "previous-operand"></div>
             <div class = current-operand></div>
         </div>
-        <button>AC</button>
+        <button class="span-two">AC</button>
         <button>DEL</button>
         <button>÷</button>
         <button>7</button>
@@ -30,9 +30,9 @@
         <button>2</button>
         <button>3</button>
         <button>*</button>
-        <button>%</button>
-        <button>0</button>
         <button>.</button>
+        <button>0</button>
+        <button>%</button>
         <button>=</button>
     </div>
 </body>
