--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class = "output">
             <div data-previous-operand class = "previous-operand">
             </div>
-            <div data-currernt-operand class = current-operand>
+            <div data-current-operand class = current-operand>
             </div>
         </div>
         <button data-all-clear class="span-two">AC</button>
